--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </header>
 <main class="main">
  <section class="hero">
-   <img class="background-img" src="#" alt="Надоел Гранд каньон - Добро пожаловать в Седону"
+   <img class="background-img" src="#" alt="Надоел Гранд каньон - Добро пожаловать в Седону">
    <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
    <p> Седона — небольшой городок в Аризоне,
     заслуживающий большего!</p>
