Добавление span visually-hidden

--- a/catalog.html
+++ b/catalog.html
@@ -46,8 +46,10 @@
     <section class="hotel-selection">
       <h1 class="hotel-selection-header">Гостиницы Седоны</h1>
       <ol class="breadcrumbs">
-        <li class="breadcrumbs-item visually hidden">
-          <a class="breadcrumbs-link" href="index.html">Возврат на главную</a>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="index.html">
+            <span class="visually hidden">Возврат на главную</span>
+          </a>
         </li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link">Гостиницы</a>
@@ -84,13 +86,19 @@
         </select>
         <ul class="card-view-buttons">
           <li class="card-view-item">
-            <button class="card-view-button-grid active visually hidden" type="button">Сортировка колонка</button>
+            <button class="card-view-button-grid active" type="button">
+              <span class="visually hidden">Сортировка колонка</span>
+            </button>
           </li>
           <li class="card-view-item">
-            <button class="card-view-button-textUnder visually hidden" type="button">Сортировка картинка над описанием</button>
+            <button class="card-view-button-textUnder visually hidden" type="button">
+              <span class="visually hidden">Сортировка картинка над описанием</span>
+            </button>
           </li>
           <li class="card-view-item">
-            <button class="card-view-button-list visually hidden" type="button">Сортировка список</button>
+            <button class="card-view-button-list visually hidden" type="button">
+              <span class="visually hidden">Сортировка список</span>
+            </button>
           </li>
         </ul>
       </div>
@@ -177,9 +185,6 @@
           <button class="pagination-link" type="button">Показать еще</button>
         </li>
         <li class="pagination-item" value="10">
-          <a class="pagination-link" href="#">10</a>
-        </li>
-        <li class="pagination-item">
           <a class="pagination-link" href="#">10</a>
         </li>
       </ol>
