--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
       <ol class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">
-            <span class="visually hidden">Возврат на главную</span>
+            <span class="visually-hidden">Возврат на главную</span>
           </a>
         </li>
         <li class="breadcrumbs-item">
@@ -87,17 +87,17 @@
         <ul class="card-view-buttons">
           <li class="card-view-item">
             <button class="card-view-button-grid active" type="button">
-              <span class="visually hidden">Сортировка колонка</span>
+              <span class="visually-hidden">Сортировка колонка</span>
             </button>
           </li>
           <li class="card-view-item">
-            <button class="card-view-button-textUnder visually hidden" type="button">
-              <span class="visually hidden">Сортировка картинка над описанием</span>
+            <button class="card-view-button-textUnder visually-hidden" type="button">
+              <span class="visually-hidden">Сортировка картинка над описанием</span>
             </button>
           </li>
           <li class="card-view-item">
-            <button class="card-view-button-list visually hidden" type="button">
-              <span class="visually hidden">Сортировка список</span>
+            <button class="card-view-button-list visually-hidden" type="button">
+              <span class="visually-hidden">Сортировка список</span>
             </button>
           </li>
         </ul>
