--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-        <img src="#" alt="Логотип сайта Седона">
+        <img src="images/sedonaLogo.svg" alt="Логотип сайта Седона" width="140px" height="70px">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -105,7 +105,7 @@
       <ul class="hotels-list">
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="#" alt="Вид на ночное небо со дна каньона">
+            <img class="hotel-img" src="images/catalogImages/catalogAmara.jpg" alt="Вид на ночное небо со дна каньона" width="300px" height="212px">
           </a>
           <h4 class="hotel-name">Amara Resort & Spa</h4>
           <p class="hotel-price">
@@ -121,7 +121,8 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="#" alt="Горный хребет на фоне неба и радуги">
+            <img class="hotel-img" src="images/catalogImages/catalogVillas.jpg" alt="Горный хребет на фоне неба и радуги" width="300px" height="212px">
+          </a>
           </a>
           <h4 class="hotel-name">Villas at Poco Diablo</h4>
           <p class="hotel-price">
@@ -137,7 +138,8 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="#" alt="Гора в окружении зеленой растительности">
+            <img class="hotel-img" src="images/catalogImages/catalogDesert.jpg" alt="Гора в окружении зеленой растительности" width="300px" height="212px">
+          </a>
           </a>
           <h4 class="hotel-name">Desert Quail Inn</h4>
           <p class="hotel-price">
@@ -153,7 +155,8 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="#" alt="Одинокая гора на фоне звездного неба">
+            <img class="hotel-img" src="images/catalogImages/catalogGreentree.jpg" alt="Одинокая гора на фоне звездного неба" width="300px" height="212px">
+          </a>
           </a>
           <h4 class="hotel-name">GreenTree Inn</h4>
           <p class="hotel-price">
@@ -204,16 +207,19 @@
       <ul class="social">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
+            <img src="images/socials/socialVK.svg" alt="логотип Вконтакте" width="24px" height="14px">
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
+            <img src="images/socials/socialTelegram.svg" alt="Логотип Телеграм" width="18px" height="15.1px">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademy">
+            <img src="images/socials/socialYoutube.svg" alt="Логотип Ютуб" width="22px" height="17px">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
@@ -222,7 +228,8 @@
         <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
       </div>
       <div class="devlogo-container">
-        <a class="devlogo" href="https://htmlacademy.ru/"><img src="#" alt="Логотип создателей сайта"></a>
+        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademyLogo_.svg" alt="Логотип создателей сайта" width="114.9px" height="32.9px">
+        </a>
       </div>
     </div>
   </footer>
