--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="navigation">
       <a class="navigation-logo">
-        <img src="#" alt="Логотип сайта Седона">
+        <img src="images/sedonaLogo.svg" alt="Логотип сайта Седона" width="140px" height="70px">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -24,11 +24,13 @@
       <ul class="navigation-list ">
         <li class="navigation-item">
           <button type="button">
+            <img src="images/icons/searchIcon.svg" alt="Иконка поиска" width="18px" height="18px">
             <span class="visually-hidden">Поиск</span>
           </button>
         </li>
         <li class="navigation-item">
           <button type="button">
+            <img src="images/icons/favorites.svg" alt="Добавить в избранное" width="18px" height="17px">
             <span class="visually-hidden">Добавить в избранное</span>
           </button>
         </li>
@@ -42,7 +44,7 @@
   </header>
   <main class="main">
     <section class="hero">
-      <img class="background-img" src="#" alt="Надоел Гранд каньон - Добро пожаловать в Седону">
+      <img class="background-img" src="images/welcomeText.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону" width="458px" height="352px">
       <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
       <p> Седона — небольшой городок в Аризоне,
         заслуживающий большего!</p>
@@ -54,7 +56,7 @@
             <li class="advantage-item">
               <h3 class="advantage-item-header">Настоящий городок</h3>
               <p class="advantage-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="#" alt="Пейзаж города Седоны">
+              <img src="images/features/featuresPhoto1.jpg" alt="Пейзаж города Седоны" width="800px" height="385px">
             </li>
             <li class="advantage-item">
               <h3 class="advantage-item-header">Небольшая площадь</h3>
@@ -71,7 +73,7 @@
             <li class="advantage-item">
               <h3 class="advantage-item-header">Там есть мост дьявола</h3>
               <p class="advantage-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-              <img src="#" alt="Вид на мост Дьявола издалека">
+              <img src="images/features/featuresPhoto2.jpg" alt="Вид на мост Дьявола издалека" width="800px" height="385px">
             </li>
           </ul>
       </div>
@@ -113,16 +115,19 @@
       <ul class="social">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
+            <img src="images/socials/socialVK.svg" alt="логотип Вконтакте" width="24px" height="14px">
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
+            <img src="images/socials/socialTelegram.svg" alt="Логотип Телеграм" width="18px" height="15.1px">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademy">
+            <img src="images/socials/socialYoutube.svg" alt="Логотип Ютуб" width="22px" height="17px">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
@@ -131,7 +136,7 @@
         <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
       </div>
       <div class="devlogo-container">
-        <a class="devlogo" href="https://htmlacademy.ru/"><img src="#" alt="Логотип создателей сайта"></a>
+        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademyLogo_.svg" alt="Логотип создателей сайта" width="114.9px" height="32.9px"></a>
       </div>
   </footer>
 </body>
