--- a/catalog.html
+++ b/catalog.html
@@ -26,11 +26,13 @@
       <ul class="navigation-list ">
         <li class="navigation-item">
           <button type="button">
+            <img src="images/searchIcon.svg" alt="Иконка поиска" width="18px" height="18px">
             <span class="visually-hidden">Поиск</span>
           </button>
         </li>
         <li class="navigation-item">
           <button type="button">
+            <img src="images/favorites.svg" alt="Добавить в избранное" width="18px" height="17px">
             <span class="visually-hidden">Добавить в избранное</span>
           </button>
         </li>
@@ -105,7 +107,7 @@
       <ul class="hotels-list">
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/catalogAmara.jpg" alt="Вид на ночное небо со дна каньона" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogImages/amara.jpg" alt="Вид на ночное небо со дна каньона" width="300px" height="212px">
           </a>
           <h4 class="hotel-name">Amara Resort & Spa</h4>
           <p class="hotel-price">
@@ -121,7 +123,7 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/catalogVillas.jpg" alt="Горный хребет на фоне неба и радуги" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogImages/villas.jpg" alt="Горный хребет на фоне неба и радуги" width="300px" height="212px">
           </a>
           </a>
           <h4 class="hotel-name">Villas at Poco Diablo</h4>
@@ -138,7 +140,7 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/catalogDesert.jpg" alt="Гора в окружении зеленой растительности" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogImages/desert.jpg" alt="Гора в окружении зеленой растительности" width="300px" height="212px">
           </a>
           </a>
           <h4 class="hotel-name">Desert Quail Inn</h4>
@@ -155,7 +157,7 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/catalogGreentree.jpg" alt="Одинокая гора на фоне звездного неба" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogImages/greentree.jpg" alt="Одинокая гора на фоне звездного неба" width="300px" height="212px">
           </a>
           </a>
           <h4 class="hotel-name">GreenTree Inn</h4>
@@ -207,19 +209,19 @@
       <ul class="social">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="images/socials/socialVK.svg" alt="логотип Вконтакте" width="24px" height="14px">
+            <img src="images/socials/vk.svg" alt="логотип Вконтакте" width="24px" height="14px">
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="images/socials/socialTelegram.svg" alt="Логотип Телеграм" width="18px" height="15.1px">
+            <img src="images/socials/telegram.svg" alt="Логотип Телеграм" width="18px" height="15.1px">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademy">
-            <img src="images/socials/socialYoutube.svg" alt="Логотип Ютуб" width="22px" height="17px">
+            <img src="images/socials/youtube.svg" alt="Логотип Ютуб" width="22px" height="17px">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
