--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <ul class="navigation-list ">
         <li class="navigation-item">
           <button type="button">
-            <img src="images/icons/searchIcon.svg" alt="Иконка поиска" width="18px" height="18px">
+            <img src="images/searchIcon.svg" alt="Иконка поиска" width="18px" height="18px">
             <span class="visually-hidden">Поиск</span>
           </button>
         </li>
         <li class="navigation-item">
           <button type="button">
-            <img src="images/icons/favorites.svg" alt="Добавить в избранное" width="18px" height="17px">
+            <img src="images/favorites.svg" alt="Добавить в избранное" width="18px" height="17px">
             <span class="visually-hidden">Добавить в избранное</span>
           </button>
         </li>
@@ -56,7 +56,7 @@
             <li class="advantage-item">
               <h3 class="advantage-item-header">Настоящий городок</h3>
               <p class="advantage-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="images/features/featuresPhoto1.jpg" alt="Пейзаж города Седоны" width="800px" height="385px">
+              <img src="images/features/photo1.jpg" alt="Пейзаж города Седоны" width="800px" height="385px">
             </li>
             <li class="advantage-item">
               <h3 class="advantage-item-header">Небольшая площадь</h3>
@@ -73,7 +73,7 @@
             <li class="advantage-item">
               <h3 class="advantage-item-header">Там есть мост дьявола</h3>
               <p class="advantage-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-              <img src="images/features/featuresPhoto2.jpg" alt="Вид на мост Дьявола издалека" width="800px" height="385px">
+              <img src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека" width="800px" height="385px">
             </li>
           </ul>
       </div>
@@ -115,19 +115,19 @@
       <ul class="social">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="images/socials/socialVK.svg" alt="логотип Вконтакте" width="24px" height="14px">
+            <img src="images/socials/vk.svg" alt="логотип Вконтакте" width="24px" height="14px">
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="images/socials/socialTelegram.svg" alt="Логотип Телеграм" width="18px" height="15.1px">
+            <img src="images/socials/telegram.svg" alt="Логотип Телеграм" width="18px" height="15.1px">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademy">
-            <img src="images/socials/socialYoutube.svg" alt="Логотип Ютуб" width="22px" height="17px">
+            <img src="images/socials/youtube.svg" alt="Логотип Ютуб" width="22px" height="17px">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
