Исправлены названия для графики

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-        <img src="images/sedonaLogo.svg" alt="Логотип сайта Седона" width="140px" height="70px">
+        <img src="images/sedonalogo.svg" alt="Логотип сайта Седона" width="140px" height="70px">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -26,7 +26,7 @@
       <ul class="navigation-list ">
         <li class="navigation-item">
           <button type="button">
-            <img src="images/searchIcon.svg" alt="Иконка поиска" width="18px" height="18px">
+            <img src="images/searchicon.svg" alt="Иконка поиска" width="18px" height="18px">
             <span class="visually-hidden">Поиск</span>
           </button>
         </li>
@@ -107,7 +107,7 @@
       <ul class="hotels-list">
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/amara.jpg" alt="Вид на ночное небо со дна каньона" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogimages/amara.jpg" alt="Вид на ночное небо со дна каньона" width="300px" height="212px">
           </a>
           <h4 class="hotel-name">Amara Resort & Spa</h4>
           <p class="hotel-price">
@@ -123,7 +123,7 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/villas.jpg" alt="Горный хребет на фоне неба и радуги" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogimages/villas.jpg" alt="Горный хребет на фоне неба и радуги" width="300px" height="212px">
           </a>
           </a>
           <h4 class="hotel-name">Villas at Poco Diablo</h4>
@@ -140,7 +140,7 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/desert.jpg" alt="Гора в окружении зеленой растительности" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogimages/desert.jpg" alt="Гора в окружении зеленой растительности" width="300px" height="212px">
           </a>
           </a>
           <h4 class="hotel-name">Desert Quail Inn</h4>
@@ -157,7 +157,7 @@
         </li>
         <li class="hotel-list-item">
           <a class="hotel-link" href="#">
-            <img class="hotel-img" src="images/catalogImages/greentree.jpg" alt="Одинокая гора на фоне звездного неба" width="300px" height="212px">
+            <img class="hotel-img" src="images/catalogimages/greentree.jpg" alt="Одинокая гора на фоне звездного неба" width="300px" height="212px">
           </a>
           </a>
           <h4 class="hotel-name">GreenTree Inn</h4>
@@ -230,7 +230,7 @@
         <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
       </div>
       <div class="devlogo-container">
-        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademyLogo_.svg" alt="Логотип создателей сайта" width="114.9px" height="32.9px">
+        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademylogo_.svg" alt="Логотип создателей сайта" width="114.9px" height="32.9px">
         </a>
       </div>
     </div>
