--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="navigation">
       <a class="navigation-logo">
-        <img src="images/sedonaLogo.svg" alt="Логотип сайта Седона" width="140px" height="70px">
+        <img src="images/sedonalogo.svg" alt="Логотип сайта Седона" width="140px" height="70px">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -24,7 +24,7 @@
       <ul class="navigation-list ">
         <li class="navigation-item">
           <button type="button">
-            <img src="images/searchIcon.svg" alt="Иконка поиска" width="18px" height="18px">
+            <img src="images/searchicon.svg" alt="Иконка поиска" width="18px" height="18px">
             <span class="visually-hidden">Поиск</span>
           </button>
         </li>
@@ -44,7 +44,7 @@
   </header>
   <main class="main">
     <section class="hero">
-      <img class="background-img" src="images/welcomeText.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону" width="458px" height="352px">
+      <img class="background-img" src="images/welcometext.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону" width="458px" height="352px">
       <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
       <p> Седона — небольшой городок в Аризоне,
         заслуживающий большего!</p>
@@ -136,7 +136,7 @@
         <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
       </div>
       <div class="devlogo-container">
-        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademyLogo_.svg" alt="Логотип создателей сайта" width="114.9px" height="32.9px"></a>
+        <a class="devlogo" href="https://htmlacademy.ru/"><img src="images/htmlacademylogo_.svg" alt="Логотип создателей сайта" width="114.9px" height="32.9px"></a>
       </div>
   </footer>
 </body>
